<resources>
    <string name="app_name">IMBK Hisse ve Endeksler</string>

    <string name="veripark">VERIPARK</string>
    <string name="imbk_stock_and_index">IMBK Hisse ve Endeksler</string>
    <string name="stock_and_index">Hisse ve Endeksler</string>
    <string name="increasing">Yükselenler</string>
    <string name="decreasing">Azalanlar</string>
    <string name="per_volume_30">Hacme Göre - 30</string>
    <string name="per_volume_50">Hacme Göre - 50</string>
    <string name="per_volume_100">Hacme Göre - 100</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="stock_symbol">Sembol</string>
    <string name="stock_price">Fiyat</string>
    <string name="stock_difference">Fark</string>
    <string name="stock_volume">Hacim</string>
    <string name="stock_buy">Alış</string>
    <string name="stock_sell">Satış</string>
    <string name="stock_fluctuation">Değişim</string>

    <string name="stock_daily_decrease">Günlük Düşüş</string>
    <string name="stock_daily_increase">Günlük Yüksek</string>
    <string name="stock_number">Adet</string>
    <string name="stock_ceil">Tavan</string>
    <string name="stock_bottom">Taban</string>

    <string name="platform_name">Android</string>

    <string name="aes_key">aesKey</string>
    <string name="aes_iv">aesIv</string>
    <string name="handshake_auth">handshakeAuth</string>

    <string name="period_respond">periodRespond</string>
</resources>