<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StockListActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/tv_stock_symbol"
                style="@style/tv_stock_header"
                android:text="@string/stock_symbol" />

            <TextView
                android:id="@+id/tv_stock_price"
                style="@style/tv_stock_header"
                android:text="@string/stock_price" />

            <TextView
                android:id="@+id/tv_stock_difference"
                style="@style/tv_stock_header"
                android:text="@string/stock_difference" />

            <TextView
                android:id="@+id/tv_stock_volume"
                style="@style/tv_stock_header"
                android:text="@string/stock_volume" />

            <TextView
                android:id="@+id/tv_stock_buy"
                style="@style/tv_stock_header"
                android:text="@string/stock_buy" />

            <TextView
                android:id="@+id/tv_stock_sell"
                style="@style/tv_stock_header"
                android:text="@string/stock_sell" />

            <TextView
                android:id="@+id/tv_stock_fluctuation"
                style="@style/tv_stock_header"
                android:text="@string/stock_fluctuation" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>